force-app/main/default/objects/df_160_arvinger__c/df_160_arvinger__c.object-meta.xml
<CustomObject>
    <label>Arvinger</label>
    <nameField>
        <label>Arvinger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arvingers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>