force-app/main/default/objects/df_160_arvinger__c/fields/arvegruppe__c.field-meta.xml
<CustomField>
    <fullName>arvegruppe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arvegruppe</label>
    <type>Checkbox</type>
</CustomField>