force-app/main/default/objects/df_160_arvinger__c/fields/arveprocent__c.field-meta.xml
<CustomField>
    <fullName>arveprocent__c</fullName>
    <label>Arveprocent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>