force-app/main/default/objects/df_160_arvinger__c/fields/arving_efter_frstafdde__c.field-meta.xml
<CustomField>
    <fullName>arving_efter_frstafdde__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arving efter førstafdøde</label>
    <type>Checkbox</type>
</CustomField>