force-app/main/default/objects/df_160_arvinger__c/fields/arving_efter_lngstlevende__c.field-meta.xml
<CustomField>
    <fullName>arving_efter_lngstlevende__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arving efter længstlevende</label>
    <type>Checkbox</type>
</CustomField>