force-app/main/default/objects/df_160_arvinger__c/fields/arvinger_hvis_p1_dr_frst__c.field-meta.xml
<CustomField>
    <fullName>arvinger_hvis_p1_dr_frst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arvinger hvis P1 dør først</label>
    <type>Checkbox</type>
</CustomField>