force-app/main/default/objects/df_160_arvinger__c/fields/sort_fr__c.field-meta.xml
<CustomField>
    <fullName>sort_fr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sort får</label>
    <type>Checkbox</type>
</CustomField>