force-app/main/default/objects/df_160_arvinger__c/fields/subs_arvngr_gruppe_el_pers__c.field-meta.xml
<CustomField>
    <fullName>subs_arvngr_gruppe_el_pers__c</fullName>
    <label>Bestemt person eller gruppe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>subs_arvngr_vlg_person</fullName>
                <label>Tilføj bestemt person</label>
            </value>
            <value>
                <fullName>subs_arvngr_vlg_gruppe</fullName>
                <label>Tilføj gruppe af personer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>