force-app/main/default/objects/df_160_arvinger__c/fields/subsidir_arving__c.field-meta.xml
<CustomField>
    <fullName>subsidir_arving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidiær arving</label>
    <type>Checkbox</type>
</CustomField>