force-app/main/default/objects/df_160_arvinger__c/fields/vlg_arving__c.field-meta.xml
<CustomField>
    <fullName>vlg_arving__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg arving</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_arving</relationshipLabel>
    <relationshipName>vlg_arving</relationshipName>
    <type>Lookup</type>
</CustomField>