force-app/main/default/objects/df_160_arvinger__c/fields/vlg_arving_frstafd__c.field-meta.xml
<CustomField>
    <fullName>vlg_arving_frstafd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg arving efter førstafdøde</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_arving_frstafd</relationshipLabel>
    <relationshipName>vlg_arving_frstafd</relationshipName>
    <type>Lookup</type>
</CustomField>