force-app/main/default/objects/df_160_arvinger__c/fields/vlg_arving_lngstlev__c.field-meta.xml
<CustomField>
    <fullName>vlg_arving_lngstlev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg arving efter længstlevende</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_arving_lngstlev</relationshipLabel>
    <relationshipName>vlg_arving_lngstlev</relationshipName>
    <type>Lookup</type>
</CustomField>