force-app/main/default/objects/df_160_arvinger__c/fields/vlg_organisation__c.field-meta.xml
<CustomField>
    <fullName>vlg_organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg organisation</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_organisation</relationshipLabel>
    <relationshipName>vlg_organisation</relationshipName>
    <type>Lookup</type>
</CustomField>