force-app/main/default/objects/df_160_arvinger__c/fields/vlg_sort_fr__c.field-meta.xml
<CustomField>
    <fullName>vlg_sort_fr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg sort får</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_sort_fr</relationshipLabel>
    <relationshipName>vlg_sort_fr</relationshipName>
    <type>Lookup</type>
</CustomField>